2019. 9.17. Reimplemented dzSysFPrint and dzSysArrayFPrint. [dz_sys]
2019. 9.17. Added dzSysFromZTK, dzSysRegZTK, dzSysArrayFromZTK and dzSysArrayScanZTK. [dz_sys]
2019. 9.17. Created dz_errmsg.h. [dz_tf, dz_lin, dz_ident, dz_sys, dz_sys_pid, dz_sys_lag, dz_sys_filt_bw, dz_sys_tf]
2019. 9.17. Renamed dzPex to dzTF and dzSysPex to dzSysTF. [dz_sys, dz_tf, dz_lin, dz_sys_tf, app]
2019. 9.17. Renamed dz_pex to dz_tf and dz_sys_pex to dz_sys_tf. [dz_tf, dz_sys_tf]
2019. 9.17. Added dzLinRegZTK, dzLinFromZTK and dzLinFPrint. [dz_lin]
2019. 9.16. Modified dzSysCreate* to return a pointer to the instance if succeeding, or the null pointer otherwise. [dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filter_maf, dz_sys_filter_bw, dz_sys_gen, dz_sys_lin, dz_sys_pex]
2019. 9.16. Modified specification of dzSysCreateLimit. [dz_sys_misc]
2019. 9.16. Added dzSysArrayAlloc and reimplemented _dzSysFAlloc.[dz_sys]
2019. 8.18. Renamed type and _met members in dzSys class to typestr and com, respectively. [dz_sys, dz_sys_gen, dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_pex, dz_sys_lin]
2019. 8.18. Renamed dzSysMethod to dzSysCom. [dz_sys, dz_sys_gen, dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_pex, dz_sys_lin]
2019. 8.18. Renamed DZ_SYS_TAG and DZ_SYS_CONNECT_TAG to ZTK_TAG_DZSYS and ZTK_TAG_DZSYS_CONNECT, respectively. [dz_sys]
2019. 8. 8. Reflected renaming of zNameDestroy to zNameFree. [dz_sys, dz_sys_pex, dz_sys_filt_bw]
2019. 6.28. Reflected new specifications of zStrList and zStrAddrList. [app]
2019. 6.18. Reflected new specification of zVecElem. [dz_pex]
2019. 6.18. Reflected new specification of zVecBuf and zMatBuf. [dz_sys_pex]
2019. 6.18. Reflected renaming from zVecClear to zVecZero. [dz_sys_lin, dz_pex]
2019. 6.13. Renamed *Read and *Write to *Scan and *Print, respectively. [dz_sys, dz_sys_gen, dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_pex, dz_sys_lin, dz_pex, dz_lin]